登录注册页面

--- a/FreshShop/static/store/css/sb-admin-2.css
+++ b/FreshShop/static/store/css/sb-admin-2.css
@@ -11595,7 +11595,7 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("http://img4.imgtn.bdimg.com/it/u=2365173552,1600985734&fm=26&gp=0.jpg");
   background-position: center;
   background-size: cover;
 }
