--- a/FreshShop/Store/static/store/css/sb-admin-2.css
+++ b/FreshShop/Store/static/store/css/sb-admin-2.css
@@ -11595,7 +11595,7 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("http://img0.imgtn.bdimg.com/it/u=3293099503,606929711&fm=26&gp=0.jpg/600x800");
   background-position: center;
   background-size: cover;
 }
